[package]
name = "flyingdarts-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
aws_lambda_events = "0.11"
http = "0.2"

# Local dependency to the auth package
flyingdarts-auth = { path = "../../../../packages/backend/rust/auth" }

[lib]
name = "flyingdarts_authorizer"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[example]]
name = "test_auth"
path = "examples/test_auth.rs" 